# menlo

./: .env.example  .gitignore  README.ko.md  README.md  agents.md  level_2_autonomous_vision_starter_ko.ipynb  pyproject.toml
.codex/skills/ultragoal/: SKILL.md
docs/: Project_Guideline.md  README.md  analyzE_scaffold.md  knowledge.md  level2_background_knowledge.ko.md  level2_project_conditions.ko.md  project_instructions.ko.md  project_instructions.md  troubleshooting_runtime.md
docs/reference/: implementation_recipes.md  llm_memory_verification.md  motion_navigation.md  perception.md  sdk_runtime.md
notebooks/project/ko/: level_2_autonomous_vision_starter_ko.ipynb
notebooks/student/en/: workshop_01_basics_en.ipynb  workshop_02_perception_en.ipynb  workshop_03_navigation_en.ipynb  workshop_04_agents_en.ipynb
notebooks/student/ko/: workshop_01_basics_ko.ipynb  workshop_02_perception_ko.ipynb  workshop_03_navigation_ko.ipynb  workshop_04_agents_ko.ipynb
workbook/: workshop_01_basics_ko copy.ipynb  workshop_02_perception_ko copy.ipynb  workshop_03_navigation_ko copy.ipynb  workshop_04_agents_ko.ipynb
